--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
       <version>3.0</version>
       <scope>compile</scope>
     </dependency>
+    <!-- dependency to kubernetes -->
+    <dependency>
+      <groupId>io.kubernetes</groupId>
+      <artifactId>client-java</artifactId>
+      <version>10.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
