--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>com.github.stephenc.continuous</groupId>
   <artifactId>k2p-maven-plugin</artifactId>
-  <version>1.x-SNAPSHOT</version>
+  <version>1.2</version>
   <packaging>maven-plugin</packaging>
 
   <name>Kubernetes To Properties Maven Plugin</name>
@@ -57,7 +57,7 @@
     <connection>scm:git:https://github.com/stephenc/k2p-maven-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:stephenc/k2p-maven-plugin.git</developerConnection>
     <url>http://github.com/stephenc/k2p-maven-plugin/tree/master/</url>
-    <tag>HEAD</tag>
+    <tag>k2p-maven-plugin-1.2</tag>
   </scm>
   <issueManagement>
     <system>github</system>
